# cmakeExample0

./: CMakeLists.txt  main.cpp
